kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: devops

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:

      - name: backend
        image: chritik24/devops-backend:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 5000
