kubernetes/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: devops

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:
        - name: mysql
          image: mysql:8.4

          ports:
            - containerPort: 3306

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"

          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

            - name: mysql-initdb
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc

        - name: mysql-initdb
          configMap:
            name: mysql-initdb
