kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: devops

spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 80
